# hermes-vps

./: .env.example  .gitignore  .hermes.md  AGENTS.md  CONTEXT.md  Justfile  README.md  flake.nix  pyproject.toml  pyrightconfig.json
artifacts/: basedpyright.json
bootstrap/: 10-base.sh  20-hardening.sh  30-hermes.sh  40-telegram-gateway.sh  90-verify.sh
docs/: control-panel-operator-guide.md  operator-validation-configure-deletion.md
hermes_control_core/: __init__.py  actions.py  engine.py  interfaces.py  runner.py  session.py
hermes_vps_app/: __init__.py  cli.py  cloud_remediation.py  config_model.py  config_panel.py  error_taxonomy.py  hermes_live_metadata.py  hermes_oauth.py  just_shim.py  operational.py  operator_snapshot.py  panel_config_flow.py  panel_entrypoint.py  panel_shell.py  panel_startup.py  panel_textual_app.py  status_presentation.py  telegram_gateway.py
scripts/: configure.sh  configure_async.py  configure_flow.py  configure_logic.py  configure_services.py  configure_state.py  configure_tui.py  toolchain.sh  toolchain_guard.py  update_ssh_alias.sh
tests/: test_action_result_schema.py  test_apply_cli.py  test_bootstrap_cli.py  test_cli_error_taxonomy.py  test_cloud_remediation.py  test_compound_cli.py  test_config_model_issue04.py  test_configure_apply_atomicity.py  test_configure_apply_plan.py  test_configure_async.py  test_configure_flow_transitions.py  test_configure_logic.py  test_configure_services.py  test_configure_steps.py  test_configure_tui.py  test_configure_tui_async.py  test_configure_tui_main.py  test_control_core_engine_smoke.py  (+34 more)
(+81 files in other folders)
