[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-vps-control-panel"
version = "0.1.0"
description = "Nix-first VPS control panel framework and app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["hermes_control_core*", "hermes_vps_app*"]
